--- a/themes/bootstrap3/templates/search/home.phtml
+++ b/themes/bootstrap3/templates/search/home.phtml
@@ -44,7 +44,7 @@
         <? if ($field == "callnumber-first"): ?>
           <? $i = 0; foreach ($sortedList as $url => $value): ?>
             <? if (!empty($value)): ?>
-              <li><a href="<?=$url?>"><?=$this->escapeHtml($value)?></a></li>
+              <li class="li_grey"><a href="<?=$url?>"><?=$this->escapeHtml($value)?></a></li>
             <? else: $i--; ?>
             <? endif; ?>
             <? if (++$i == 10): ?>
@@ -55,19 +55,19 @@
         <? elseif ($field == 'hierarchy_top_title'): ?>
           <? $i = 0; foreach ($sortedList as $url => $value): ?>
             <? if (++$i > 10): ?>
-              <li><a href="<?=$this->url('collections-home')?>"><strong><?=$this->transEsc("More options")?>...</strong></a></li>
+              <li class="li_grey"><a href="<?=$this->url('collections-home')?>"><strong><?=$this->transEsc("More options")?>...</strong></a></li>
               <? break; ?>
             <? else: ?>
-              <li><a href="<?=$this->url('collections-bytitle')?>?title=<?=urlencode($value)?>"><?=$this->escapeHtml($value)?></a></li>
+              <li class="li_grey"><a href="<?=$this->url('collections-bytitle')?>?title=<?=urlencode($value)?>"><?=$this->escapeHtml($value)?></a></li>
             <? endif; ?>
           <? endforeach; ?>
         <? else: ?>
           <? $i = 0; foreach ($sortedList as $url => $value): ?>
             <? if (++$i > 10): ?>
-              <li><a href="<?=$this->url($advSearch)?>"><strong><?=$this->transEsc("More options")?>...</strong></a></li>
+              <li class="li_grey"><a href="<?=$this->url($advSearch)?>"><strong><?=$this->transEsc("More options")?>...</strong></a></li>
               <? break; ?>
             <? elseif (!empty($value)): ?>
-              <li><a href="<?=$url?>"><?=$this->escapeHtml($value)?></a></li>
+              <li class="li_grey"><a href="<?=$url?>"><?=$this->escapeHtml($value)?></a></li>
             <? else: $i--; ?>
             <? endif; ?>
           <? endforeach; ?>
