--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -30,8 +30,7 @@
             'bulk_email_success' => 'bulk_email_success',
             'bulk_save_success' => 'bulk_save_success',
             'close' => 'close',
-            'loading' => 'Loading',
-            'sms_success' => 'sms_success'
+            'loading' => 'Loading'
           )
         );
         if ($cart->isActive()) {
