Added support for the "FID Systematik" hierarchy.

--- a/themes/bootstrap3/templates/footer.phtml
+++ b/themes/bootstrap3/templates/footer.phtml
@@ -14,6 +14,7 @@
   <li><a href="<?=$this->url('browse-home')?>"><?=$this->transEsc('Browse the Catalog')?></a></li>
   <li><a href="<?=$this->url('alphabrowse-home')?>"><?=$this->transEsc('Browse Alphabetically')?></a></li>
   <li><a href="<?=$this->url('search-newitem')?>"><?=$this->transEsc('New Items')?></a></li>
+  <li><a href="<?=$this->url('fidsystematik-home')?>"><?=$this->transEsc('FID Systematik')?></a></li>
 </ul>
 </div>
 <div class="col-sm-4"><p><strong><?=$this->transEsc('Need Help?')?></strong></p>
