Display links to superior works in the result list.

--- a/themes/bootstrap3/templates/RecordDriver/SolrDefault/result-list.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrDefault/result-list.phtml
@@ -54,6 +54,14 @@
       <? endif; ?>
     </div>
 
+    <? $ids_and_titles = $this->driver->getContainerIDsAndTitles(); if (!empty($ids_and_titles)): ?>
+      <? foreach ($ids_and_titles as $id => $title): ?>
+        <div>
+	  <?=$this->transEsc('Part of')?>: <a href="/vufind/Record/<?=$id?>"><?=$this->escapeHtml($title)?></a>
+        </div>
+      <? endforeach; ?>
+    <? endif; ?>
+
     <? if(!$this->driver->isCollection()): ?>
       <? if ($snippet = $this->driver->getHighlightedSnippet()): ?>
         <? if (!empty($snippet['caption'])): ?>
