--- a/themes/bootstrap3/templates/RecordDriver/SolrDefault/result-list.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrDefault/result-list.phtml
@@ -116,25 +116,12 @@
       <? endif; ?>
     </div>
 
-    <? /* We need to find out if we're supposed to display an OpenURL link ($openUrlActive),
-          but even if we don't plan to display the link, we still want to get the $openUrl
-          value for use in generating a COinS (Z3988) tag -- see bottom of file.
-        */
-      $openUrl = $this->driver->getOpenURL();
-      $openUrlActive = $this->driver->openURLActive('results');
-      $urls = $this->record($this->driver)->getLinkDetails();
-      if ($openUrlActive || !empty($urls)): ?>
-      <? if ($openUrlActive): ?>
+    <? $urls_and_material_types = $this->driver->getURLsAndMaterialTypes(); ?>
+    <? if (!empty($urls_and_material_types)): ?>
+      <? foreach ($urls_and_material_types as $url => $material_type): ?>
+        <a href="<?=$url?>" class="fulltext" target="new"><i class="fa fa-external-link"></i> <?=$this->escapeHtml($material_type)?></a>
         <br/>
-        <?=$this->openUrl($openUrl)?>
-        <? if ($this->driver->replaceURLsWithOpenURL()) $urls = array(); // clear URL list if replace setting is active ?>
-      <? endif; ?>
-      <? if (!is_array($urls)) $urls = array();
-        if(!$this->driver->isCollection()):
-          foreach ($urls as $current): ?>
-            <a href="<?=$this->escapeHtmlAttr($this->proxyUrl($current['url']))?>" class="fulltext" target="new"><i class="fa fa-external-link"></i> <?=($current['url'] == $current['desc']) ? $this->transEsc('Get full text') : $this->escapeHtml($current['desc'])?></a><br/>
-        <? endforeach; ?>
-      <? endif; ?>
+      <? endforeach; ?>
     <? endif; ?>
 
     <?=str_replace('class="', 'class="label label-info ', $this->record($this->driver)->getFormatList())?>
