--- a/themes/bootstrap3/templates/RecordDriver/SolrDefault/core.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrDefault/core.phtml
@@ -91,7 +91,7 @@
         </tr>
       <? endif; ?>
 
-      <? require "JOP.phtml"; ?>
+      <? include(realpath(dirname(__FILE__) . "JOP.phtml")); ?>
 
       <? $publications = $this->driver->getPublicationDetails(); if (!empty($publications)): ?>
       <tr>
